--- a/views/layout.html
+++ b/views/layout.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Device</title>
+        <title>Title</title>
 
         {% block meta %}
         <meta charset="utf-8">
