--- a/app/views/metrics/index.html
+++ b/app/views/metrics/index.html
@@ -1,7 +1,7 @@
 {% extends '../layout.html' %}
 
 {% block css %}
-    <link rel="stylesheet" type="text/css" href="vendor/c3/c3.css">
+    <link rel="stylesheet" type="text/css" href="/vendor/c3/c3.css">
 {% endblock %}
 
 {% block content %}
@@ -19,9 +19,9 @@
     <script>
         var metrics = {% autoescape false %}{{ metrics|json }}{% endautoescape %};
     </script>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/d3/d3.min.js" charset="utf-8"></script>
-    <script src="vendor/c3/c3.min.js"></script>
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script src="/vendor/d3/d3.min.js" charset="utf-8"></script>
+    <script src="/vendor/c3/c3.min.js"></script>
     <script>
 
         for(metric in metrics){
