tying login to database

--- a/app/views/accounts/new.html
+++ b/app/views/accounts/new.html
@@ -5,6 +5,7 @@
     <h1>Create account</h1>
     <form action="/account" method="POST">
         <input name="account" placeholder="Account Name" type="text">
+        <input name="password" type="text">
         <button>Create Account</button>
     </form>
 {% endblock %}
