--- a/app/views/accounts/show.html
+++ b/app/views/accounts/show.html
@@ -13,6 +13,30 @@
     {% for application in account.applications %}
         <div>
             <a href="/account/{{ account.name }}/app/{{ application.name }}">{{ application.name }}</a>
+            <a href="/account/{{ account.name }}/app/{{ application.name }}" data-method="delete">delete {{ application.name }}</a>
         </div>
     {% endfor %}
+    <h3>Actions</h3>
+    <a href="/account/{{ account.name }}/app/new">Create new account</a>
+{% endblock %}
+
+{% block js-bottom %}
+    <script src="/vendor/jquery/jquery.min.js"></script>
+    <script>
+        (function(){
+
+            $('body')
+                .on('click', '[data-method]', function(e){
+                    $.ajax({
+                            url: this.href,
+                            method: 'DELETE'
+                        })
+                        .done(function(data, textStatus, jqXHR){
+                            console.log(jqXHR.status);
+                        });
+                    return false;
+                })
+        }());
+
+    </script>
 {% endblock %}
